fix z-index social

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -312,7 +312,7 @@ $switch: #BDC3C7;
     position: fixed;
     top: 8px;
     right: 20px;
-    z-index:11;
+    z-index:3;
 }
 
 .the-fb,
